--- a/wp-content/themes/villagegreen/style.css
+++ b/wp-content/themes/villagegreen/style.css
@@ -4,7 +4,10 @@ Author: Trystan
 */  
 
 /* header widget area */
-
+html{
+    margin-left: 0;
+    margin-right: 0;
+}
 .nwa-header-widget{
     margin-top: 1em;
     margin-bottom: 1em;
